add solana walletkit

--- a/package.json
+++ b/package.json
@@ -10,23 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@mysten/sui.js": "^0.50.1",
+    "@solana/wallet-adapter-base": "^0.9.24",
+    "@solana/wallet-adapter-react": "^0.15.36",
+    "@solana/wallet-adapter-react-ui": "^0.9.36",
+    "@solana/wallet-adapter-wallets": "^0.19.33",
     "@solana/web3.js": "^1.91.1",
     "@suiet/wallet-kit": "^0.2.22",
+    "@wormhole-foundation/sdk": "^1.14.1",
+    "@wormhole-foundation/sdk-solana": "^1.14.1",
+    "@wormhole-foundation/sdk-sui": "^1.14.1",
+    "dayjs": "^1.11.10",
     "ethers": "^6.11.1",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.2",
-    "zustand": "^4.5.2",
-    "dayjs": "^1.11.10",
-    "react-hot-toast": "^2.4.1",
     "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.4"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
