--- a/programs/liquidity_pool/programs/liquidity_pool/Cargo.toml
+++ b/programs/liquidity_pool/programs/liquidity_pool/Cargo.toml
@@ -16,5 +16,9 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.28.0", features = ["init-if-needed"] } # Enable init-if-needed feature
-anchor-spl = "0.28.0" # Add anchor-spl dependency
+# Upgrade anchor versions to match wormhole-sdk's dependency
+anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
+anchor-spl = "0.30.1"
+wormhole-anchor-sdk = "0.30.1-alpha.3" # Use specific pre-release version suggested by error
+hex = "0.4" # Often needed for working with addresses/hashes from Wormhole
+borsh = "0.10" # For payload deserialization (use version compatible with anchor/solana if needed)
