--- a/programs/liquidity_pool/Anchor.toml
+++ b/programs/liquidity_pool/Anchor.toml
@@ -1,15 +1,15 @@
 [features]
 seeds = false
 skip-lint = false
-[programs.localnet]
-liquidity_pool = "3ab43EQpMxCN5pwcRi2iZPfNjkZvBVbfnDoPmHJE1Fgv"
+[programs.devnet] # Changed from localnet to devnet
+liquidity_pool = "GL6uWvwZAapbf54GQb7PwKxXrC6gnjyNcrBMeAvkh7mg"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
-wallet = "/Users/dante/.config/solana/id.json"
+cluster = "Devnet" # Changed cluster to Devnet
+wallet = "temp_devnet_wallet.json" # Point to the temporary wallet file
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
