--- a/programs/liquidity_pool/Anchor.toml
+++ b/programs/liquidity_pool/Anchor.toml
@@ -1,8 +1,12 @@
 [features]
 seeds = false
 skip-lint = false
+
+[toolchain]
+anchor_version = "0.30.1" # Pin anchor version
+
 [programs.devnet] # Changed from localnet to devnet
-liquidity_pool = "GL6uWvwZAapbf54GQb7PwKxXrC6gnjyNcrBMeAvkh7mg"
+liquidity_pool = "GL6uWvwZAapbf54GQb7PwKxXrC6gnjyNcrBMeAvkh7mg" # Keep placeholder or update after deploy
 
 [registry]
 url = "https://api.apr.dev"
