--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@wormhole-foundation/sdk": "^1.14.1",
     "@wormhole-foundation/sdk-solana": "^1.14.1",
     "@wormhole-foundation/sdk-sui": "^1.14.1",
+    "borsh": "^2.0.0",
     "dayjs": "^1.11.10",
     "ethers": "^6.11.1",
     "framer-motion": "^11.0.8",
