--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@certusone/wormhole-sdk": "^0.10.18",
     "@hookform/resolvers": "^3.3.4",
+    "@mysten/sui": "^1.27.0",
     "@mysten/sui.js": "^0.50.1",
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.4.13",
@@ -20,7 +21,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.36",
     "@solana/wallet-adapter-wallets": "^0.19.33",
     "@solana/web3.js": "^1.91.1",
-    "@suiet/wallet-kit": "^0.3.3",
+    "@suiet/wallet-kit": "^0.3.4",
     "@wormhole-foundation/sdk": "^1.14.1",
     "@wormhole-foundation/sdk-solana": "^1.14.1",
     "@wormhole-foundation/sdk-sui": "^1.14.1",
@@ -28,14 +29,15 @@
     "dayjs": "^1.11.10",
     "ethers": "^6.11.1",
     "framer-motion": "^11.0.8",
+    "js-sha256": "^0.11.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.2",
+    "react-router-dom": "^6.30.0",
+    "recharts": "^2.15.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
@@ -43,6 +45,8 @@
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^2.0.1",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
