--- a/package.json
+++ b/package.json
@@ -60,3 +60,8 @@
     "vite": "^5.4.2"
   }
 }
+"overrides": {
+    "@injectivelabs/sdk-ts@1.10.72": {
+      "@injectivelabs/token-metadata": "1.10.42"
+    }
+  }
