--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@certusone/wormhole-sdk": "^0.10.18",
     "@hookform/resolvers": "^3.3.4",
     "@mysten/sui": "^1.27.0",
-    "@mysten/sui.js": "^0.50.1",
+    "@mysten/wallet-adapter-react": "^11.0.0",
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-base": "^0.9.24",
@@ -37,6 +37,7 @@
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.30.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
