--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@certusone/wormhole-sdk": "^0.10.18",
+    "@cetusprotocol/cetus-sui-clmm-sdk": "^5.3.4",
     "@hookform/resolvers": "^3.3.4",
     "@mysten/sui": "^1.27.0",
+    "@mysten/sui.js": "^0.54.1",
     "@mysten/wallet-adapter-react": "^11.0.0",
     "@project-serum/anchor": "^0.26.0",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-base": "^0.9.24",
     "@solana/wallet-adapter-react": "^0.15.36",
@@ -26,6 +29,7 @@
     "@wormhole-foundation/sdk-solana": "^1.14.1",
     "@wormhole-foundation/sdk-sui": "^1.14.1",
     "borsh": "^2.0.0",
+    "bs58": "^6.0.0",
     "dayjs": "^1.11.10",
     "ethers": "^5.8.0",
     "framer-motion": "^11.0.8",
